@@ -1,1 +1,1 @@
-1.8.6.0-rc3
+1.8.6.0
