@@ -1,3 +1,7 @@
+2011-08-31  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 1.8.6.0 Released.
+
 2011-08-25  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 1.8.6.0-rc3 Released.
